correction chassedejobs.html (texte) + ajout page 404 + modif des hyperliens pour ouvrir les liens dans un nouvel onglet

--- a/chassedejobs.html
+++ b/chassedejobs.html
@@ -71,9 +71,9 @@
                 <li><a class="fr" href="#"><span class="icon-plus-3 add"></span>Suivez-nous</a>
                     <div class="follow-list"> 
                         <ul>
-                            <li class="s-twitter"><a href="https://twitter.com/sparklinetalks"><span class="icon-twitter"></span>Twitter</a></li>
-							<li class="s-linkedin"><a href="https://www.linkedin.com/company/sparkline-human-finders/"><span class="icon-linkedin"></span>Linkedin</a></li>
-                            <li class="s-pinterest"><a href="http://www.viadeo.com/v/company/sparkline"><span class="flaticon-viadeo"></span>Viadeo</a></li>
+                            <li class="s-twitter"><a target="_blank" href="https://twitter.com/sparklinetalks"><span class="icon-twitter"></span>Twitter</a></li>
+							<li class="s-linkedin"><a target="_blank" href="https://www.linkedin.com/company/sparkline-human-finders/"><span class="icon-linkedin"></span>Linkedin</a></li>
+                            <li class="s-pinterest"><a target="_blank" href="http://www.viadeo.com/v/company/sparkline"><span class="flaticon-viadeo"></span>Viadeo</a></li>
 				        </ul>
 				    </div>						
 				</li>
@@ -159,7 +159,7 @@
                         </span>
                 </div>
                 <!--   hr-End-->			  
-                <p><span class="icon-quotes-left"></span><span><b> COMPRENDRE LES BESOINS DU CANDIDAT POUR MIEUX CIBLER LES ENTREPRISES </b></span></p>
+                <p><span class="icon-quotes-left"></span><span><b> COMPRENDRE LES BESOINS DU CANDIDAT POUR MIEUX CIBLER LES ENTREPRISES </b></span><span class="icon-quote"></span></p>
                 <p>Nous définissons <b>le projet professionnel du candidat</b> sur la base de son parcours, de ses acquis professionnels et de ses attentes.</p>
                 <p>Nous identifions et rencontrons ensuite <b>les entreprises qui répondent à son projet professionnel</b>. Nous développons constamment notre panel d’entreprises par une veille et une participation active aux évènements IT tels que Meetup, DevoXX, Salon du Big Data, Salon du e-Marketing, Salon du e-Commerce...</p>
                 <p> Les sociétés avec lesquelles nous choisissons de travailler, de la startup à la grande PME, ont pour points communs :</p>
@@ -197,7 +197,7 @@
                     <div class="accordion_op">
                         <h3>Un accompagnement complet</h3>
                         <div>
-                            <p>Que le candidat soit en recherche active ou à l'écoute du marché, nous l'accompagnons <span>tout le long de sa recherche de poste</span>.</p>
+                            <p>Que le candidat soit en recherche active ou à l'écoute du marché, nous l'accompagnons <span>tout au long de sa recherche de poste</span>.</p>
                             <p>Ensemble, nous analysons son parcours et effectuons son <span>bilan professionnel</span>. Notre équipe d'experts nous aide à qualifier ses compétences et mettre en évidence ses points forts et ses axes de progression. Grâce à notre veille sur le marché de l'emploi et nos expériences respectives du métier d'ingénieur et du recrutement, nous l'aidons à se positionner sur le marché et le conseillons sur ses choix professionnels</span>.</p>
                         <p>Ce service d'accompagnement est gratuit pour le candidat.</p>
                         </div>
@@ -268,17 +268,17 @@
                 <div class="shear-icon">
                     <ul>
                         <li class="s-twitter themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right">
-                            <a href="https://twitter.com/sparklinetalks"  rel="twitter">
+                            <a target="_blank" href="https://twitter.com/sparklinetalks"  rel="twitter">
                                 <span class="icon-twitter">
                             </a>
                         </li>
 						<li class="s-linkedin themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
-                            <a href="https://www.linkedin.com/company/sparkline-human-finders"  rel="linkedin">
+                            <a target="_blank" href="https://www.linkedin.com/company/sparkline-human-finders"  rel="linkedin">
                                 <span class="icon-linkedin">
                             </a>
                         </li>
                         <li class="s-pinterest themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
-                            <a href="http://www.viadeo.com/v/company/sparkline/"  rel="viadeo">
+                            <a target="_blank" href="http://www.viadeo.com/v/company/sparkline/"  rel="viadeo">
                                 <span class="flaticon-viadeo">
                             </a>
                         </li>
@@ -349,7 +349,7 @@
 	
 <div class="footer">
     <div class="container">
-	   <p>Copyright &copy; 2014 <span><a href="home.html" target="_blank">Sparkline</a></span> - Tous droits réservés</p>
+	   <p>Copyright &copy; 2014 <span><a href="home.html">Sparkline</a></span> - Tous droits réservés</p>
 	</div>	
 </div>
 </section>
