--- a/team.html
+++ b/team.html
@@ -70,9 +70,9 @@
                 <li><a class="fr" href="#"><span class="icon-plus-3 add"></span>Suivez-nous</a>
                     <div class="follow-list"> 
                         <ul>
-                            <li class="s-twitter"><a href="https://twitter.com/sparklinetalks"><span class="icon-twitter"></span>Twitter</a></li>
-							<li class="s-linkedin"><a href="https://www.linkedin.com/company/sparkline-human-finders/"><span class="icon-linkedin"></span>Linkedin</a></li>
-                            <li class="s-pinterest"><a href="http://www.viadeo.com/v/company/sparkline"><span class="flaticon-viadeo"></span>Viadeo</a></li>
+                            <li class="s-twitter"><a target="_blank" href="https://twitter.com/sparklinetalks"><span class="icon-twitter"></span>Twitter</a></li>
+							<li class="s-linkedin"><a target="_blank" href="https://www.linkedin.com/company/sparkline-human-finders/"><span class="icon-linkedin"></span>Linkedin</a></li>
+                            <li class="s-pinterest"><a target="_blank" href="http://www.viadeo.com/v/company/sparkline"><span class="flaticon-viadeo"></span>Viadeo</a></li>
 				        </ul>
 				    </div>						
 				</li>
@@ -97,7 +97,7 @@
 <!-- BAR TITRE -->
 <div class="title-bar"><!-- style t-shadow/ t-gray/ -->
 	<div class="container ">
-		<h2 class="page-title">Découvrez notre EQUIPE</h2> <!-- /.page-title -->
+		<h2 class="page-title">L'équipe</h2> <!-- /.page-title -->
 		<div class="page-root">
 			<a href="home.html">Accueil</a>/
 			<a href="#">L'équipe</a>			
@@ -134,10 +134,10 @@
 				    </div>
                     <div class="team-sr">
                         <ul>
-                            <li><a href="mailto:elinore.thomas@sparkline.fr"  rel="mail"><span class="icon-mail"></a></li>
-                            <li><a href="https://fr.linkedin.com/in/elinorethomas"  rel="linkedin"><span class="icon-linkedin"></a></li>
-                            <li><a href="fr.viadeo.com/fr/profile/elinore.thomas"  rel="viadeo"><span class="flaticon-viadeo"></a></li>
-                            <li><a href="https://twitter.com/sparklinetalks"  rel="twitter"><span class="icon-twitter"></a></li>
+                            <li><a target="_blank" href="mailto:elinore.thomas@sparkline.fr"  rel="mail"><span class="icon-mail"></a></li>
+                            <li><a target="_blank" href="https://fr.linkedin.com/in/elinorethomas"  rel="linkedin"><span class="icon-linkedin"></a></li>
+                            <li><a target="_blank" href="fr.viadeo.com/fr/profile/elinore.thomas"  rel="viadeo"><span class="flaticon-viadeo"></a></li>
+                            <li><a target="_blank" href="https://twitter.com/sparklinetalks"  rel="twitter"><span class="icon-twitter"></a></li>
                         </ul>
                         <div class="clear"></div>
 				    </div>
@@ -158,10 +158,10 @@
                     </div>
                     <div class="team-sr">
                         <ul>
-                            <li><a href="mailto:hadil.filali@sparkline.fr"  rel="mail"><span class="icon-mail"></a></li>
-                            <li><a href="https://fr.linkedin.com/in/hadilfilali"  rel="linkedin"><span class="icon-linkedin"></a></li>
-                            <li><a href="http://www.viadeo.com/fr/profile/hadil.filali1"  rel="viadeo"><span class="flaticon-viadeo"></a></li>
-                            <li><a href="https://twitter.com/sparklinetalks"  rel="twitter"><span class="icon-twitter"></a></li>
+                            <li><a target="_blank" href="mailto:hadil.filali@sparkline.fr"  rel="mail"><span class="icon-mail"></a></li>
+                            <li><a target="_blank" href="https://fr.linkedin.com/in/hadilfilali"  rel="linkedin"><span class="icon-linkedin"></a></li>
+                            <li><a target="_blank" href="http://www.viadeo.com/fr/profile/hadil.filali1"  rel="viadeo"><span class="flaticon-viadeo"></a></li>
+                            <li><a target="_blank" href="https://twitter.com/sparklinetalks"  rel="twitter"><span class="icon-twitter"></a></li>
                         </ul>
                         <div class="clear"></div>
                     </div>
@@ -201,10 +201,10 @@
                     </div>
                     <div class="team-sr">
                         <ul>
-                            <li><a href="https://fr.linkedin.com/in/loicknuchel"  rel="linkedin"><span class="icon-linkedin"></a></li>
-                            <li><a href="http://loic.knuchel.org"  rel="home"><span class="icon-home"></a></li>
-                            <li><a href="https://github.com/loicknuchel"  rel="github"><span class="icon-github"></a></li>
-                            <li><a href="https://twitter.com/loicknuchel"  rel="twitter"><span class="icon-twitter"></a></li>
+                            <li><a target="_blank" href="https://fr.linkedin.com/in/loicknuchel"  rel="linkedin"><span class="icon-linkedin"></a></li>
+                            <li><a target="_blank" href="http://loic.knuchel.org"  rel="home"><span class="icon-home"></a></li>
+                            <li><a target="_blank" href="https://github.com/loicknuchel"  rel="github"><span class="icon-github"></a></li>
+                            <li><a target="_blank" href="https://twitter.com/loicknuchel"  rel="twitter"><span class="icon-twitter"></a></li>
                         </ul>
                         <div class="clear"></div>
                     </div>
@@ -226,8 +226,8 @@
                     </div>
                     <div class="team-sr">
                         <ul>
-                            <li><a href="https://fr.linkedin.com/in/GillesMoyse"  rel="linkedin"><span class="icon-linkedin"></a></li>
-                            <li><a href="https://www.researchgate.net/profile/Gilles_Moyse"  rel="linkedin"><span class="icon-home"></a></li>
+                            <li><a target="_blank" href="https://fr.linkedin.com/in/GillesMoyse"  rel="linkedin"><span class="icon-linkedin"></a></li>
+                            <li><a target="_blank" href="https://www.researchgate.net/profile/Gilles_Moyse"  rel="linkedin"><span class="icon-home"></a></li>
                         </ul>
                         <div class="clear"></div>
                     </div>
@@ -270,17 +270,17 @@
                 <div class="shear-icon">
                     <ul>
                         <li class="s-twitter themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right">
-                            <a href="https://twitter.com/sparklinetalks"  rel="twitter">
+                            <a target="_blank" href="https://twitter.com/sparklinetalks"  rel="twitter">
                                 <span class="icon-twitter">
                             </a>
                         </li>
 						<li class="s-linkedin themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
-                            <a href="https://www.linkedin.com/company/sparkline-human-finders"  rel="linkedin">
+                            <a target="_blank" href="https://www.linkedin.com/company/sparkline-human-finders"  rel="linkedin">
                                 <span class="icon-linkedin">
                             </a>
                         </li>
                         <li class="s-pinterest themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
-                            <a href="http://www.viadeo.com/v/company/sparkline/"  rel="viadeo">
+                            <a target="_blank" href="http://www.viadeo.com/v/company/sparkline/"  rel="viadeo">
                                 <span class="flaticon-viadeo">
                             </a>
                         </li>
@@ -351,7 +351,7 @@
 	
 <div class="footer">
     <div class="container">
-	   <p>Copyright &copy; 2014 <span><a href="home.html" target="_blank">Sparkline</a></span> - Tous droits réservés</p>
+	   <p>Copyright &copy; 2014 <span><a href="home.html">Sparkline</a></span> - Tous droits réservés</p>
 	</div>	
 </div>
 </section>
