--- a/blog.html
+++ b/blog.html
@@ -70,9 +70,9 @@
                 <li><a class="fr" href="#"><span class="icon-plus-3 add"></span>Suivez-nous</a>
                     <div class="follow-list"> 
                         <ul>
-                            <li class="s-twitter"><a href="https://twitter.com/sparklinetalks"><span class="icon-twitter"></span>Twitter</a></li>
-							<li class="s-linkedin"><a href="https://www.linkedin.com/company/sparkline-human-finders/"><span class="icon-linkedin"></span>Linkedin</a></li>
-                            <li class="s-pinterest"><a href="http://www.viadeo.com/v/company/sparkline"><span class="flaticon-viadeo"></span>Viadeo</a></li>
+                            <li class="s-twitter"><a target="_blank" href="https://twitter.com/sparklinetalks"><span class="icon-twitter"></span>Twitter</a></li>
+							<li class="s-linkedin"><a target="_blank" href="https://www.linkedin.com/company/sparkline-human-finders/"><span class="icon-linkedin"></span>Linkedin</a></li>
+                            <li class="s-pinterest"><a target="_blank" href="http://www.viadeo.com/v/company/sparkline"><span class="flaticon-viadeo"></span>Viadeo</a></li>
 				        </ul>
 				    </div>						
 				</li>
@@ -130,17 +130,17 @@
                 <div class="shear-icon">
                     <ul>
                         <li class="s-twitter themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right">
-                            <a href="https://twitter.com/sparklinetalks"  rel="twitter">
+                            <a target="_blank" href="https://twitter.com/sparklinetalks"  rel="twitter">
                                 <span class="icon-twitter">
                             </a>
                         </li>
 						<li class="s-linkedin themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
-                            <a href="https://www.linkedin.com/company/sparkline-human-finders"  rel="linkedin">
+                            <a target="_blank" href="https://www.linkedin.com/company/sparkline-human-finders"  rel="linkedin">
                                 <span class="icon-linkedin">
                             </a>
                         </li>
                         <li class="s-pinterest themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
-                            <a href="http://www.viadeo.com/v/company/sparkline/"  rel="viadeo">
+                            <a target="_blank" href="http://www.viadeo.com/v/company/sparkline/"  rel="viadeo">
                                 <span class="flaticon-viadeo">
                             </a>
                         </li>
@@ -211,7 +211,7 @@
 	
 <div class="footer">
     <div class="container">
-	   <p>Copyright &copy; 2014 <span><a href="home.html" target="_blank">Sparkline</a></span> - Tous droits réservés</p>
+	   <p>Copyright &copy; 2014 <span><a href="home.html">Sparkline</a></span> - Tous droits réservés</p>
 	</div>	
 </div>
 </section>
