ajout des balises méta description et keywords pour le référencement du site

--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>Sparkline : 404</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="description" content="Sparkline est un cabinet de recrutement sp&eacute;cialis&eacute; dans les m&eacute;tiers du Big Data et du Web. Notre approche fait la différence, la chasse de jobs : nous ciblons à partir des besoins de nos candidats les entreprises qui recrutent. Nos profils préférés : Data Scientist, Architecte Big Data, Développeurs Big Data, Web Développeurs, Mobile Développeurs.">
+<meta name="Keywords" content="sparkline, recrutement, conseil, web, mobile, informatique, Big Data, Data Scientist, Machine Learning, spécialiste, Ful Stack developer, recrutement informatique, data scientist, architecte big data, NoSQL, Hadoop, chasseurs de jobs, chasseurs de têtes, recruteurs, emploi, RH, CDI, Paris, France">
 
 	<!--Google Font -->
 
