--- a/chassedejobs.html
+++ b/chassedejobs.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Sparkline | Chasse de jobs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="description" content="Sparkline est un cabinet de recrutement sp&eacute;cialis&eacute; dans les m&eacute;tiers du Big Data et du Web. Notre approche fait la différence, la chasse de jobs : nous ciblons à partir des besoins de nos candidats les entreprises qui recrutent. Nos profils préférés : Data Scientist, Architecte Big Data, Développeurs Big Data, Web Développeurs, Mobile Développeurs.">
+<meta name="Keywords" content="sparkline, recrutement, conseil, web, mobile, informatique, Big Data, Data Scientist, Machine Learning, spécialiste, Ful Stack developer, recrutement informatique, data scientist, architecte big data, NoSQL, Hadoop, chasseurs de jobs, chasseurs de têtes, recruteurs, emploi, RH, CDI, Paris, France">
+
 
 	<!--Google Font -->
 
@@ -107,7 +110,7 @@
 </div><!-- /.title-bar -->
 <!-- FIN BAR TITRE -->
     
-<!-- PROCESS CHASSE DE JOBS -->
+<!-- LE PROCESS -->
 <div class="col-wrap"><!-- style col-shadow/ col-gray/ testimonial/-->
     <div class="container ">
     <!-- Three columns of text below the carousel -->
@@ -144,7 +147,7 @@
 </div><!-- /.col -->
 <!-- FIN PROCESS CHASSE DE JOBS -->
 	
-<!-- CONCEPT ET ETAPE -->
+<!-- LE CONCEPT -->
 <div class="col-wrap style col-gray"><!-- style col-shadow/ border /col-gray/ testimonial/-->
     <div class="container ">
         <!-- Two columns of text below the Box -->
@@ -177,8 +180,7 @@
 <!-- FIN CONCEPT ET ETAPE -->
 
 
-
-<!-- PARTIE VALEUR AJOUTEE -->
+<!-- LA VALEUR AJOUTEE -->
 <div class="col-wrap "><!-- style col-shadow/ border /col-gray/ testimonial/-->
     <div class="container ">
     <!-- Three columns of text below the carousel -->
@@ -258,7 +260,23 @@
         </div><!-- /.row -->		  
     </div>
 </div><!-- /.col -->
-<!-- FIN PARTIE VALEUR AJOUTEE -->
+<!-- FIN VALEUR AJOUTEE -->
+
+<!-- NOS FICHES METIERS -->
+<div class="col-wrap style col-shadow"><!-- style col-shadow/ border /col-gray/ testimonial/-->
+    <div class="container ">
+        <!-- Two columns of text below the Box -->
+        <div class="row-fluid"><!-- box-style row Class .box-style -->
+            <div class="span themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
+                <p>
+                    <a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="fichesmetiers.html">DECOUVREZ NOS FICHES METIERS</a>
+                </p>
+            </div><!-- /.span4 -->
+            <!-- FIN LES ETAPES -->
+        </div><!-- /.row -->		  
+    </div>
+</div><!-- /.col -->
+<!-- FIN CONCEPT ET ETAPE -->
 
 <!-- BARRE DES RESEAUX SOCIAUX -->
 <div class="col-wrap shear-icon-box col-gray"><!-- style col-shadow/ col-gray/ testimonial/-->
