suppression du bouton Decouvrez nos fiches métier

--- a/chassedejobs.html
+++ b/chassedejobs.html
@@ -263,17 +263,17 @@
 <!-- FIN VALEUR AJOUTEE -->
 
 <!-- NOS FICHES METIERS -->
-<div class="col-wrap style col-shadow"><!-- style col-shadow/ border /col-gray/ testimonial/-->
+<!-- <div class="col-wrap style col-shadow"><!-- style col-shadow/ border /col-gray/ testimonial/ --
     <div class="container ">
-        <!-- Two columns of text below the Box -->
-        <div class="row-fluid"><!-- box-style row Class .box-style -->
+        <!-- Two columns of text below the Box --
+        <div class="row-fluid"><!-- box-style row Class .box-style --
             <div class="span themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
                 <p>
                     <a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="fichesmetiers.html">DECOUVREZ NOS FICHES METIERS</a>
                 </p>
-            </div><!-- /.span4 -->
-            <!-- FIN LES ETAPES -->
-        </div><!-- /.row -->		  
+            </div><!-- /.span4 --
+            <!-- FIN LES ETAPES --
+        </div><!-- /.row --	  
     </div>
 </div><!-- /.col -->
 <!-- FIN CONCEPT ET ETAPE -->
